--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
   </developers>
 
   <dependencies>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>2.0.5</version>
+    </dependency>
   </dependencies>
 
   <build>
